# upaste-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: argv.rs  main.rs
