[package]
name = "upaste-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
edit = "0.1.5"
reqwest = "0.11.24"
tokio = { version = "1.35.1", features = ["full"] }
whoami = "1.4.1"
